--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   background: #363b47;
   color: #e6eaf0;
-  font-family: 'Oxanium', cursive;
+  font-family: "Oxanium", cursive;
 }
 
-.container{
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,9 +18,25 @@ body{
   height: 80vh;
 }
 
-.clock{
+.clock {
   border: 2px solid #e6eaf0;
   padding: 32px 72px;
   font-size: 3rem;
   border-radius: 10px;
+}
+
+@media (max-width: 400px) {
+  .clock {
+    font-size: 2rem;
+    padding: 16px 36px;
+    border-radius: 8px;
+  }
+}
+
+@media (max-width: 240px) {
+  .clock {
+    font-size: 1rem;
+    padding: 8px 18px;
+    border-radius: 6px;
+  }
 }
